リセットとスタイルを記述していくcssを追加

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -2,6 +2,10 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'portfolio/reset.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
+
     <title>Kenta Portfolio</title>
 </head>
 <body>
