--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -2,13 +2,15 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'portfolio/reset.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/bootstrap.min.css' %}" />
 
     <title>Kenta Portfolio</title>
 </head>
 <body>
+
 
 </body>
 </html>
