--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -12,5 +12,8 @@
 <body>
 
 
+
+    <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.slim.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'portfolio/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
