--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/bootstrap.min.css' %}" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/bootstrap.min.css' %}" />
 
-    <title>Kenta Portfolio</title>
+  <title>Kenta Portfolio</title>
 </head>
+
 <body>
+  <!--<div class="site-wrapper"></div>-->
 
 
-
-    <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.slim.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'portfolio/js/bootstrap.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.slim.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'portfolio/js/tether.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'portfolio/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
