--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -1,15 +1,3 @@
-/*.hoge {
-  border: dotted 2px #FFF;
-  width: 95vw;
-  height: 95vh;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: absolute;
-  margin: auto;
-}*/
-
 @font-face {
   font-family: 'MyFont';
   /*src: url(font/Perfect_DOS_VGA_437_Win.ttf);*/
@@ -17,14 +5,14 @@
   src: url(font/LLDOT2.ttf);
 }
 
+.starter-template {
+    padding: 3rem 1.5rem;
+    text-align: center;
+}
+
 .top {
   width: 100vw;
   height: 100vh;
-  top: 0;
-  border: 0;
-  left: 0;
-  right: 0;
-  position: absolute;
   margin: auto;
   display: block;
   background-color: #222;
@@ -90,7 +78,6 @@
     0% {opacity:0;}
     100% {opacity:1;}
 }
-
 
 @media screen and (max-width: 1200px) {
 }
