--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -19,15 +19,24 @@
       <div class="top_sub_title">Portfolio</div>
     </div>
   </div>
-  <!--<div class="site-wrapper">-->
-    <!--<div class="site-wrapper-inner">-->
-      <!--<div class="cover-container">-->
-        <!--<div class="inner cover">-->
-          <!---->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
+
+      <div class="container">
+
+      <div class="starter-template">
+        <h1>Bootstrap starter template</h1>
+        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+      </div>
+
+    </div>
+        <div class="container">
+
+      <div class="starter-template">
+        <h1>fff starter template</h1>
+        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+      </div>
+
+    </div>
+
 
   <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.slim.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'portfolio/js/tether.min.js' %}"></script>
