--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -13,14 +13,22 @@
 </head>
 
 <body>
-  <div class="top">
-    <div class="title">
-      <div class="top_title">Kenta Iwami</div>
-      <div class="top_sub_title">Portfolio</div>
+  <section class="cover" id="1">  <!--カバーページ-->
+    <div class="title_area">
+      <div class="title">Kenta Iwami</div>
+      <div class="sub_title">Portfolio</div>
     </div>
-  </div>
 
-      <div class="container">
+    <div class="arrow">
+      <a href="#2"><span></span><span></span><span></span>Scroll</a>
+    </div>
+
+</div>
+  </section>
+
+
+  <section class="container" id="2">
+<div class="container">
 
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
@@ -36,6 +44,8 @@
       </div>
 
     </div>
+  </section>
+
 
 
   <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.slim.min.js' %}"></script>
