--- a/portfolio/static/portfolio/cover.css
+++ b/portfolio/static/portfolio/cover.css
@@ -31,7 +31,8 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #222;
+  /*background-color: #222;*/
+  background-color: #000;
 }
 body {
   color: #fff;
