--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -10,6 +10,29 @@
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
 
   <title>Kenta Portfolio</title>
+
+  <!--<script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.slim.min.js' %}"></script>-->
+    <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
+
+  <!-- スムーズスクロール部分の記述 -->
+    <script>
+    $(function(){
+    // #で始まるアンカーをクリックした場合に処理
+      $('a[href^="#"]').click(function() {
+        // スクロールの速度
+        var speed = 400; // ミリ秒
+        // アンカーの値取得
+        var href= $(this).attr("href");
+        // 移動先を取得
+        var target = $(href == "#" || href == "" ? 'html' : href);
+        // 移動先を数値で取得
+        var position = target.offset().top;
+        // スムーススクロール
+        $('body,html').animate({scrollTop:position}, speed, 'swing');
+        return false;
+      });
+    });
+    </script>
 </head>
 
 <body>
@@ -22,33 +45,25 @@
     <div class="arrow">
       <a href="#2"><span></span><span></span><span></span>Scroll</a>
     </div>
-
-</div>
   </section>
 
-
   <section class="container" id="2">
-<div class="container">
-
+    <div class="container">
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
       </div>
-
     </div>
-        <div class="container">
 
+    <div class="container">
       <div class="starter-template">
         <h1>fff starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
       </div>
-
     </div>
   </section>
 
 
-
-  <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.slim.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'portfolio/js/tether.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'portfolio/js/bootstrap.min.js' %}"></script>
 </body>
