--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -1,3 +1,27 @@
+/*************** Globals ***************/
+html,
+body {
+  height: 100%;
+  /*background-color: #222;*/
+  background-color: #000;
+}
+
+body {
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+}
+/* Links */
+a,
+a:focus,
+a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+a:hover {
+  opacity: 0.5;
+}
+
 @font-face {
   font-family: 'DotFont';
   /*src: url(font/Perfect_DOS_VGA_437_Win.ttf);*/
@@ -5,7 +29,7 @@
   src: url(font/LLDOT2.ttf);
 }
 
-/***************section1***************/
+/*************** section1 ***************/
 .cover {
   width: 100vw;
   height: 100vh;
@@ -30,9 +54,14 @@
   border-width: 0.5vmin;
 }
 
-.title, .sub_title {
+.title {
   font-family: "DotFont";
   font-size: 15vmin;
+}
+
+.sub_title {
+  font-family: "DotFont";
+  font-size: 13vmin;
 }
 
 .title:after, .sub_title:after {
@@ -61,7 +90,7 @@
     100% {opacity:1;}
 }
 
-/*Scrollの文字と矢印*/
+/* Scrollの文字と矢印 */
 .arrow {
   position: absolute;
   z-index: 2;
@@ -133,9 +162,17 @@ a span:nth-of-type(3) {
 
 /*************** section2 ***************/
 .starter-template {
-    padding: 3rem 1.5rem;
-    text-align: center;
+  padding: 3rem 1.5rem;
+  text-align: center;
 }
+
+.section_title {
+  width: 100%;
+  font-family: "DotFont";
+  font-size: 10vmin;
+  margin-top: 10vh;
+}
+
 
 
 /*************** @media ***************/
