--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -6,13 +6,11 @@
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/reset.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/bootstrap.min.css' %}" />
-  <link rel="stylesheet" type="text/css" href="{% static 'portfolio/cover.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
 
   <title>Kenta Portfolio</title>
 
-  <!--<script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.slim.min.js' %}"></script>-->
-    <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
 
   <!-- スムーズスクロール部分の記述 -->
     <script>
@@ -48,19 +46,24 @@
   </section>
 
   <section class="container" id="2">
-    <div class="container">
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
-    </div>
+    <!--<div class="section_title">Engineer Worsk</div>-->
+    <!--<div class="container">-->
+      <!--<div class="row">-->
+        <!--<div class="card">-->
+          <!--1 of 2-->
+        <!--</div>-->
+        <!--<div class="card">-->
+          <!--1 of 2-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
 
-    <div class="container">
-      <div class="starter-template">
-        <h1>fff starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
-    </div>
+    <!--<div class="container">-->
+      <!--<div class="starter-template">-->
+        <!--<h1>fff starter template</h1>-->
+        <!--<p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>-->
+      <!--</div>-->
+    <!--</div>-->
   </section>
 
 
