--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -46,17 +46,70 @@
   </section>
 
   <section class="container" id="2">
-    <!--<div class="section_title">Engineer Worsk</div>-->
-    <!--<div class="container">-->
-      <!--<div class="row">-->
-        <!--<div class="card">-->
-          <!--1 of 2-->
-        <!--</div>-->
-        <!--<div class="card">-->
-          <!--1 of 2-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
+    <div class="section_title">Engineer Worsk</div>
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-6">
+          <figure>
+            <img src="{% static 'portfolio/img/e_works/masamon/top.png' %}" class="img-fluid" alt="">
+            <figcaption>
+              <h3>Masamon</h3>
+                <p>表形式のシフトにおさらば</p>
+            </figcaption>
+          </figure>
+        </div>
+
+        <div class="col-md-6">
+          <figure>
+            <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
+            <figcaption>
+              <h3>FiNote</h3>
+              <p>オノマトペに着目した映画管理</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-6">
+          <figure>
+            <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
+            <figcaption>
+              <h3>App name hoge</h3>
+              <p>説明ほげほげする</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-6">
+          <figure>
+            <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
+            <figcaption>
+              <h3>App name hoge</h3>
+              <p>説明ほげほげする</p>
+            </figcaption>
+          </figure>
+        </div>
+
+        <div class="col-md-6">
+          <figure>
+            <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
+            <figcaption>
+              <h3>App name hoge</h3>
+              <p>説明ほげほげする</p>
+            </figcaption>
+          </figure>
+        </div>
+
+        <div class="col-md-6">
+          <figure>
+            <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
+            <figcaption>
+              <h3>App name hoge</h3>
+              <p>説明ほげほげする</p>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+    </div>
+
 
     <!--<div class="container">-->
       <!--<div class="starter-template">-->
