--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -29,7 +29,8 @@ a:hover {
   src: url(font/LLDOT2.ttf);
 }
 
-/*************** section1 ***************/
+
+/*************** section1(cover) ***************/
 .cover {
   width: 100vw;
   height: 100vh;
@@ -64,14 +65,14 @@ a:hover {
   font-size: 13vmin;
 }
 
-.title:after, .sub_title:after {
+.title:after, .sub_title:after, .section_title:after {
   content: "_";
   -webkit-animation:blink 0.5s ease-in-out infinite alternate;
   -moz-animation:blink 0.5s ease-in-out infinite alternate;
   animation:blink 0.5s ease-in-out infinite alternate;
 }
 
-.sub_title:before, .title:before {
+.sub_title:before, .title:before , .section_title::before {
   content: ">> ";
 }
 
@@ -160,36 +161,90 @@ a span:nth-of-type(3) {
 }
 
 
-/*************** section2 ***************/
-.starter-template {
-  padding: 3rem 1.5rem;
-  text-align: center;
-}
-
+/*************** section2(Engineer Worsk) ***************/
+/* section1にて擬似要素の追加 */
 .section_title {
   width: 100%;
   font-family: "DotFont";
   font-size: 10vmin;
-  margin-top: 10vh;
+  margin-top: 2.5rem;
 }
 
+.col-md-6 {
+  margin: .75rem 0;
+}
+.img-fluid {
+  width: 100%;
+  height: 100%;
+  border: 2px dotted;
+  padding: .5rem;
+  object-fit: contain;
+}
+
+figure {
+  max-width: 80.9vmin;
+  position: relative;
+  height: 35vmin;
+  margin: 0;
+  padding: 0;
+  background: #000;
+  overflow: hidden;
+  display: block;
+}
+figcaption {
+  position: absolute;
+  top: -100%;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,.6);
+  -webkit-transition: .3s;
+  transition: .3s;
+
+  opacity: 1;
+  margin: 0 auto;
+
+  padding-top: 10vmin;
+  font-size: 3vmin;
+}
+
+figcaption p {
+  margin: 5vmin;
+}
+
+figure:hover figcaption {
+  top: 0;
+  left: 0;
+}
 
 
 /*************** @media ***************/
 @media screen and (max-width: 1200px) {
+  /* coverのスクロール促し */
   .arrow {
     font-size: 8vmin;
   }
 }
 
 @media screen and (max-width: 700px) {
+  /* coverのスクロール促し */
   .arrow {
     font-size: 10vmin;
+  }
+  /* Engineer Worksのグリッド */
+  .col-md-6 {
+    margin: .75rem;
   }
 }
 
 @media screen and (max-width: 330px) {
+  /* coverのスクロール促し */
   .arrow {
     font-size: 12vmin;
+  }
+  /* Engineer Worksのグリッド */
+  .col-md-6 {
+    margin: .75rem;
   }
 }
