各workの要素に仮のリンクを設定

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -51,62 +51,77 @@
       <div class="row">
 
         <div class="col-md-6">
-          <figure>
-            <img src="{% static 'portfolio/img/e_works/masamon/top.png' %}" class="img-fluid" alt="">
-            <figcaption>
-              <h3>Masamon</h3>
-                <p>表形式のシフトにおさらば</p>
-            </figcaption>
-          </figure>
+            <a href="https://www.google.co.jp">
+              <figure>
+                <img src="{% static 'portfolio/img/e_works/masamon/top.png' %}" class="img-fluid" alt="">
+                <figcaption>
+                  <h3>Masamon</h3>
+                    <p>表形式のシフトにおさらば</p>
+                </figcaption>
+              </figure>
+            </a>
         </div>
 
         <div class="col-md-6">
-          <figure>
-            <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
-            <figcaption>
-              <h3>FiNote</h3>
-              <p>オノマトペに着目した映画管理</p>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-6">
-          <figure>
-            <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
-            <figcaption>
-              <h3>App name hoge</h3>
-              <p>説明ほげほげする</p>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-6">
-          <figure>
-            <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
-            <figcaption>
-              <h3>App name hoge</h3>
-              <p>説明ほげほげする</p>
-            </figcaption>
-          </figure>
+          <a href="https://www.google.co.jp">
+            <figure>
+              <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
+              <figcaption>
+                <h3>FiNote</h3>
+                <p>オノマトペに着目した映画管理</p>
+              </figcaption>
+            </figure>
+          </a>
         </div>
 
         <div class="col-md-6">
-          <figure>
-            <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
-            <figcaption>
-              <h3>App name hoge</h3>
-              <p>説明ほげほげする</p>
-            </figcaption>
-          </figure>
+          <a href="https://www.google.co.jp">
+            <figure>
+              <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
+              <figcaption>
+                <h3>App name hoge</h3>
+                <p>説明ほげほげする</p>
+              </figcaption>
+            </figure>
+          </a>
         </div>
 
         <div class="col-md-6">
-          <figure>
-            <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
-            <figcaption>
-              <h3>App name hoge</h3>
-              <p>説明ほげほげする</p>
-            </figcaption>
-          </figure>
+          <a href="https://www.google.co.jp">
+            <figure>
+              <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
+              <figcaption>
+                <h3>App name hoge</h3>
+                <p>説明ほげほげする</p>
+              </figcaption>
+            </figure>
+          </a>
         </div>
+
+        <div class="col-md-6">
+          <a href="https://www.google.co.jp">
+            <figure>
+              <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
+              <figcaption>
+                <h3>App name hoge</h3>
+                <p>説明ほげほげする</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div class="col-md-6">
+          <a href="https://www.google.co.jp">
+            <figure>
+              <img src="{% static 'portfolio/img/e_works/sample/sample.png' %}" class="img-fluid" alt="">
+              <figcaption>
+                <h3>App name hoge</h3>
+                <p>説明ほげほげする</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
       </div>
     </div>
 
