Engineer Worksの各要素を動的に生成するようにした

--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/bootstrap.min.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
 
-  <title>{{ product_name }}</title>
+  <title>{{ product.product_name }}</title>
 
   <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
 </head>
 <body>
-ほげほげ
+{{ product.product_name }}
 </body>
 </html>
