--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -67,9 +67,17 @@
       </div>
     </div>
 
-    <div class="container">
-      <a href="{% url 'portfolio:engineer_works_all' %}">more</a>
-    </div>
+    <a class="engineer_works_more" href="{% url 'portfolio:engineer_works_all' %}">
+      <div class="box">
+        <div class="engineer_works_more_after">more</div>
+        <div class="bd10 bd">
+          <div class="bdT"></div>
+          <div class="bdB"></div>
+          <div class="bdR"></div>
+          <div class="bdL"></div>
+        </div>
+      </div>
+    </a>
   </section>
 
 
