--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -80,6 +80,10 @@
     </a>
   </section>
 
+  <section class="container" id="3">  <!--Photographer Works-->
+    <div class="section_title">Photographer Works</div>
+  </section>
+
 
   <script type="text/javascript" src="{% static 'portfolio/js/tether.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'portfolio/js/bootstrap.min.js' %}"></script>
