--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -284,7 +284,9 @@ figure:hover figcaption {
 
 
 /*************** section3(Photographer Works) ***************/
-
+.col-md-3 {
+  margin: .75rem 0;
+}
 
 
 /*************** @media ***************/
