--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -148,6 +148,10 @@
     </div>
   </section>
 
+  <section class="container" id="4">  <!--Profile-->
+    <div class="section_title">Profile</div>
+  </section>
+
 
   <script type="text/javascript" src="{% static 'portfolio/js/tether.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'portfolio/js/bootstrap.min.js' %}"></script>
