--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -2,7 +2,6 @@
 html,
 body {
   height: 100%;
-  /*background-color: #222;*/
   background-color: #000;
 }
 
@@ -23,10 +22,8 @@ a:hover {
 }
 
 @font-face {
-  font-family: 'DotFont';
-  /*src: url(font/Perfect_DOS_VGA_437_Win.ttf);*/
-  /*src: url(font/dot.ttf);*/
-  src: url(font/LLDOT2.ttf);
+  font-family: "MyFont";
+  src: url(font/SourceHanSans-Light.otf)
 }
 
 
@@ -51,29 +48,14 @@ a:hover {
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
-  border-style: dotted;
+  border-style: solid;
   border-width: 0.5vmin;
-  font-family: "DotFont";
-  font-size: 13vmin;
+  font-family: "MyFont";
+  font-size: 10vmin;
 }
 
-.sub_title:before, .title:before , .section_title::before {
+.sub_title:before, .title:before , .section_title:before, .console_top:before {
   content: "$ ";
-}
-
-@-webkit-keyframes blink{
-    0% {opacity:0;}
-    100% {opacity:1;}
-}
-
-@-moz-keyframes blink{
-    0% {opacity:0;}
-    100% {opacity:1;}
-}
-
-@keyframes blink{
-    0% {opacity:0;}
-    100% {opacity:1;}
 }
 
 /* Scrollの文字と矢印 */
@@ -84,7 +66,7 @@ a:hover {
   -webkit-transform: translate(0, -50%);
   transform: translate(0, -50%);
   padding-top: 80px;
-  font-family: "DotFont";
+  font-family: "MyFont";
   font-size: 8vmin;
 
   top: 90%;
@@ -150,7 +132,7 @@ a span:nth-of-type(3) {
 /* section1にて擬似要素の追加 */
 .section_title {
   width: 100%;
-  font-family: "DotFont";
+  font-family: "MyFont";
   font-size: 10vmin;
   margin-top: 2.5rem;
 }
@@ -161,7 +143,7 @@ a span:nth-of-type(3) {
 .img-fluid {
   width: 100%;
   height: 100%;
-  border: 2px dotted;
+  border: 2px solid;
   padding: .5rem;
   object-fit: contain;
 }
@@ -190,6 +172,7 @@ figcaption {
   margin: 0 auto;
   padding-top: 10vmin;
   font-size: 3vmin;
+  font-family: "MyFont";
 }
 
 figcaption p {
@@ -207,7 +190,7 @@ figure:hover figcaption {
   opacity: 1.0;
 }
 .box {
-  font-family: "DotFont";
+  font-family: "MyFont";
   font-size: 5vmin;
   padding: 0rem 2rem;
   margin-top: 2.5rem;
@@ -275,34 +258,63 @@ figure:hover figcaption {
 
 
 /*************** section4(Profile) ***************/
-@keyframes typing { from { width: 0; } }
-@keyframes blink-car { 50% { border-color: transparent; } }
-.test2 {
-  border-right: 5px solid;
-  width: 15em;
-   /* fallback */
-  margin: 2%;
-  white-space: nowrap;
-  overflow: hidden;
-  animation: typing 2s steps(32, end),
-  blink-car 0.5s infinite ease;
+.loading {
+/*  margin-left: 5px;
+  margin-bottom: 3px;*/
+}
+
+.profile_console {
+  background-color: #111;
+  width: 100%;
+  border: 1px solid #FFF;
+  display: inline-block;
+  font-family: "MyFont";
+  font-size: 3vmin;
+  text-align: left;
+}
+
+/* section1にてbefore擬似要素を追加 */
+.console_top {
+  border-bottom: 1px solid #FFF;
+  display: inline-block;
+  width: 100%;
+  height: auto;
+  padding-left: 10px;
 }
 
 
+.console, .console_name {
+  padding: 10px;
+}
+
+.console div:before {
+  content: "$ ";
+}
+
+.profile_image {
+  width: 40%;
+  position: relative;
+  margin-bottom: 5vmin;
+}
+
+.profile_text {
+  width: 100%;
+  font-size: 3vmin;
+}
 
 
 /*************** @media ***************/
 @media screen and (max-width: 1200px) {
   /* coverのスクロール促し */
   .arrow {
-    font-size: 8vmin;
+    font-size: 5vmin;
   }
 }
 
 @media screen and (max-width: 700px) {
   /* coverのスクロール促し */
   .arrow {
-    font-size: 10vmin;
+    font-size: 7vmin;
   }
   /* Engineer Worksのグリッド */
   .col-md-6 {
@@ -313,7 +325,7 @@ figure:hover figcaption {
 @media screen and (max-width: 330px) {
   /* coverのスクロール促し */
   .arrow {
-    font-size: 12vmin;
+    font-size: 9vmin;
   }
   /* Engineer Worksのグリッド */
   .col-md-6 {
